<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.arun0009</groupId>
    <artifactId>traffictape</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>TrafficTape</name>
    <description>Privacy-aware HTTP traffic corpus and flight recorder. Spring Boot is the first capture adapter.</description>
    <url>https://github.com/arun0009/traffictape</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Arun Gopalpuri</name>
            <email>arun0009@gmail.com</email>
            <url>https://github.com/arun0009/</url>
            <organizationUrl>https://github.com/arun0009/traffictape</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>traffictape-core</module>
        <module>traffictape-sink-file</module>
        <module>traffictape-sink-s3</module>
        <module>traffictape-sink-cloudwatch</module>
        <module>traffictape-spring-boot</module>
        <module>traffictape-example</module>
        <module>traffictape-benchmarks</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:arun0009/traffictape.git</connection>
        <developerConnection>scm:git:ssh://github.com:arun0009/traffictape.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/arun0009/traffictape</url>
    </scm>

    <properties>
        <java.version>17</java.version>
        <jreleaser-maven-plugin.version>1.25.0</jreleaser-maven-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot.version>3.4.13</spring-boot.version>
        <aws-sdk.version>2.31.78</aws-sdk.version>
        <okhttp.version>4.12.0</okhttp.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <testcontainers-floci.version>1.4.0</testcontainers-floci.version>
        <jmh.version>1.37</jmh.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.github.arun0009</groupId>
                <artifactId>traffictape-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.arun0009</groupId>
                <artifactId>traffictape-sink-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.arun0009</groupId>
                <artifactId>traffictape-sink-s3</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.arun0009</groupId>
                <artifactId>traffictape-sink-cloudwatch</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.arun0009</groupId>
                <artifactId>traffictape-spring-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>io.floci</groupId>
                <artifactId>testcontainers-floci</artifactId>
                <version>${testcontainers-floci.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${jmh.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${jmh.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.18.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <properties>
                <altDeploymentRepository>local::file:./target/staging-deploy</altDeploymentRepository>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jreleaser</groupId>
                        <artifactId>jreleaser-maven-plugin</artifactId>
                        <version>${jreleaser-maven-plugin.version}</version>
                        <inherited>false</inherited>
                        <configuration>
                            <jreleaser>
                                <project>
                                    <name>traffictape</name>
                                    <description>Privacy-aware HTTP traffic corpus and flight recorder</description>
                                    <links>
                                        <homepage>https://github.com/arun0009/traffictape</homepage>
                                    </links>
                                </project>
                                <signing>
                                    <active>ALWAYS</active>
                                    <armored>true</armored>
                                </signing>
                                <deploy>
                                    <maven>
                                        <mavenCentral>
                                            <sonatype>
                                                <active>ALWAYS</active>
                                                <url>https://central.sonatype.com/api/v1/publisher</url>
                                                <stagingRepositories>target/staging-deploy</stagingRepositories>
                                            </sonatype>
                                        </mavenCentral>
                                    </maven>
                                </deploy>
                            </jreleaser>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-source</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <failOnError>false</failOnError>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
